--- a/css/style.css
+++ b/css/style.css
@@ -141,3 +141,16 @@
 	font-weight: 700;
 	 text-decoration: underline
 }
+.booking-cta h2 {
+	font-family: 'Cantata One', serif;
+	color: darkblue;
+	margin: 0px;
+	font-size: 52px;
+	font-weight: 700;
+}
+
+.body{
+	background-image: url("img/team.jpg")
+	background-repeat:no-repeat;
+
+}
